# MIDAS_GUI

./: .gitignore  LICENSE  README.md  RELEASING.md  environment.yml  launch.py  pyproject.toml  release.sh
midas_gui/: __init__.py  __main__.py  _paths.py  app.py  calib.py  constants.py  dialogs.py  helpers.py  style.py  tab_batch.py  tab_calibrate.py  tab_corrections.py  tab_export.py  tab_mask.py  tab_pdf.py  tab_refine.py  tab_texture.py  tab_view.py  widgets.py  workers.py
tests/: conftest.py  test_smoke.py
