[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midas-gui"
version = "1.0.0"
description = "PyQt5 desktop GUI for the MIDAS X-ray diffraction suite — data viewing, masking, detector calibration, integration, corrections, PDF and texture analysis."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Dishant Beniwal", email = "107612243+d-beniwal@users.noreply.github.com" }]
requires-python = ">=3.9"
keywords = [
    "MIDAS", "GUI", "PyQt5", "powder diffraction", "calibration",
    "integration", "PDF", "texture", "synchrotron", "crystallography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core GUI + scientific stack plus the MIDAS analysis backends the GUI drives.
# Floors match the midas-suite meta-package (packages/midas_suite/pyproject.toml).
dependencies = [
    "PyQt5>=5.15",
    "pyqtgraph>=0.13",
    "numpy>=1.22",
    "scipy>=1.9",
    "h5py>=3.0",
    "tifffile>=2022.0",
    "torch>=2.1",
    "midas-calibrate-v2>=0.3.3",
    "midas-integrate-v2>=0.1.0",
    "midas-calibrate>=0.2.7",
    "midas-hkls>=0.4.1",
    "midas-distortion>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[project.scripts]
midas-gui = "midas_gui.app:main"

[project.urls]
Homepage = "https://github.com/d-beniwal/MIDAS_GUI"
Issues = "https://github.com/d-beniwal/MIDAS_GUI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["midas_gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
